recursion.lessons.recursion.tree.Tree.scala.error
Tree:15: error: unclosed comment
/*Pour dessiner un arbre à quatre étages, il faut dessiner un tronc de la taille indiquée, 
^Tree:1: error: Missing closing brace `}' assumed here
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
^